; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/executor/extr_multi_task_tracker_executor.c_JobIdList.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/executor/extr_multi_task_tracker_executor.c_JobIdList.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@NIL = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_4__*)* @JobIdList to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @JobIdList(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %8 = load i32*, i32** @NIL, align 8
  store i32* %8, i32** %3, align 8
  %9 = load i32*, i32** @NIL, align 8
  store i32* %9, i32** %4, align 8
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %11 = call i32* @list_make1(%struct.TYPE_4__* %10)
  store i32* %11, i32** %4, align 8
  br label %12

12:                                               ; preds = %43, %1
  %13 = load i32*, i32** %4, align 8
  %14 = load i32*, i32** @NIL, align 8
  %15 = icmp ne i32* %13, %14
  br i1 %15, label %16, label %44

16:                                               ; preds = %12
  %17 = call i64 @palloc0(i32 4)
  %18 = inttoptr i64 %17 to i32*
  store i32* %18, i32** %5, align 8
  %19 = load i32*, i32** @NIL, align 8
  store i32* %19, i32** %6, align 8
  %20 = load i32*, i32** %4, align 8
  %21 = call i64 @linitial(i32* %20)
  %22 = inttoptr i64 %21 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %22, %struct.TYPE_4__** %7, align 8
  %23 = load i32*, i32** %4, align 8
  %24 = call i32* @list_delete_first(i32* %23)
  store i32* %24, i32** %4, align 8
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = load i32*, i32** %5, align 8
  store i32 %27, i32* %28, align 4
  %29 = load i32*, i32** %3, align 8
  %30 = load i32*, i32** %5, align 8
  %31 = call i32* @lappend(i32* %29, i32* %30)
  store i32* %31, i32** %3, align 8
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = call i32* @list_copy(i32 %34)
  store i32* %35, i32** %6, align 8
  %36 = load i32*, i32** %6, align 8
  %37 = load i32*, i32** @NIL, align 8
  %38 = icmp ne i32* %36, %37
  br i1 %38, label %39, label %43

39:                                               ; preds = %16
  %40 = load i32*, i32** %4, align 8
  %41 = load i32*, i32** %6, align 8
  %42 = call i32* @list_concat(i32* %40, i32* %41)
  store i32* %42, i32** %4, align 8
  br label %43

43:                                               ; preds = %39, %16
  br label %12

44:                                               ; preds = %12
  %45 = load i32*, i32** %3, align 8
  ret i32* %45
}

declare dso_local i32* @list_make1(%struct.TYPE_4__*) #1

declare dso_local i64 @palloc0(i32) #1

declare dso_local i64 @linitial(i32*) #1

declare dso_local i32* @list_delete_first(i32*) #1

declare dso_local i32* @lappend(i32*, i32*) #1

declare dso_local i32* @list_copy(i32) #1

declare dso_local i32* @list_concat(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
